[tool.poetry]
name = "poetry-asterisk"
version = "0.1.0"
description = ""
authors = ["chandr-andr (Kiselev Aleksandr) <askiselev00@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_asterisk"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
tomlkit = { version = "*", optional=true }
pydantic = "*"

[tool.poetry.group.test.dependencies]
typing-extensions = "^4.8.0"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
anyio = "^4.0.0"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
mypy = "^1.7.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.2"
isort = "^5.12.0"
black = "^23.10.1"
autoflake = "^2.2.1"
yesqa = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
select = ["ALL"]
fixable = ["ALL"]
ignore = ["ANN401", "D100", "D107", "SLF001", "D105", "TRY003", "PLR0913", "FBT001", "FBT002", "S608", "S101"]

[tool.black]
line-length = 79

[tool.mypy]
strict = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "# pragma: no cover",
]
omit = [
    "__main__.py",
]
